# manutencao_sensores_com_ia

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXTO.md  Dockerfile  README.md  docker-compose.yml  prompt_agents.md  prompt_execucao.md  prompt_planejamento.md  pyproject.toml  requirements.txt
.prompts/: p0_lead.txt  p1_backend.txt  p2_uiux.txt  p3_frontend.txt  p4_qa.txt  p5_reviewer.txt
.prompts/tmp/: pane0.txt  pane1.txt  pane2.txt  pane3.txt  pane4.txt  pane5.txt
docs/: EXECUCAO_PLANO.md  PRD.md  STATUS.md  anomalias_csv.md  arquitetura.excalidraw  arquitetura.mmd  review_notes.md
docs/adr/: ADR-001-stack-leve-sklearn.md  ADR-002-interruptor-lgpd.md  ADR-003-banco-trocavel.md  ADR-004-anti-alucinacao.md  ADR-005-knn-busca-vs-classificacao.md  ADR-006-deploy-docker.md  (+2 more)
json_ok/: 01_acelerando.json  02_baseline.json  03_cocked_rotor.json  04_correia.json  05_desalinhado.json  06_desbalanceado.json  07_eccentric_rotor.json  08_falta_fase.json  09_motor_desligado.json  10_normal.json  11_polia.json  12_rolamento_ball.json  13_rolamento_combination.json  14_rolamento_inner.json  15_rolamento_outer.json  16_teste.json  17_ventoinha.json  18_acelerando_v1.json  19_acelerando_v2.json  20_acelerando_v3.json
notebooks/: EDA_FIESC.html  EDA_FIESC.ipynb  analise.ipynb  prompt_canva_apresentacao.md
scripts/: 00_prepare_data.py  _smoke_backend.py  build_all.py  seed_demo.py  tmux_team.sh
tests/: conftest.py  relatorio_qa.md  sample_events.json  test_api.py  test_backend.py  test_db.py  test_faults.py  test_pipeline.py  test_semaforo.py  test_telegram.py
(+26 files in other folders)
